--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1050,6 +1050,16 @@ body {
     width: 59px;
   }
 }
+@media screen and (max-width: 768px) {
+  #thermometer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+  }
+}
 @media screen and (max-width: 550px) {
   #thermometer__frameEmotion {
     width: 150px;
